--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RecyclerView.ListActivity">
+    tools:context=".presentation.list.ListActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/userRecyclerView"
