--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -12,23 +12,23 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
     <TextView
+        android:id="@+id/tvUserId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/lt_tv_id"
         android:text="@string/list_item_id"
         android:textSize="@dimen/text_size_28"/>
 
     <TextView
+        android:id="@+id/tvUserName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/lt_tv_name"
         android:text="@string/list_item_name"
         android:textSize="@dimen/text_size_28"/>
 
     <TextView
+        android:id="@+id/tvUserSurname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/lt_tv_surname"
         android:text="@string/list_item_surname"
         android:textSize="@dimen/text_size_28"/>
 
@@ -41,16 +41,17 @@
         android:orientation="vertical">
 
     <TextView
+        android:id="@+id/tvUserGender"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/lt_tv_gender"
         android:text="@string/list_item_gender"
         android:textSize="@dimen/text_size_28"/>
 
     <TextView
+        android:id="@+id/tvUserAge"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/lt_tv_age"
+
         android:text="@string/list_item_age"
         android:textSize="@dimen/text_size_28"/>
     </LinearLayout>
